objects/Opportunity_Design__c.object
<CustomObject>
    <description>00380376 requested by Pat Hevrdejs and Priti Rastogi for SPD. Created so we can display the homeowner design via a webform (site).</description>
    <fields>
        <fullName>Customer_Response_Comments__c</fullName>
        <description>00380376 requested by Pat Hevrdejs and Priti Rastogi for SPD. Created so we can capture the homeowner comments from the design via a webform (site).</description>
        <label>Customer Response Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Design_Photo__c</fullName>
        <description>00380376 requested by Pat Hevrdejs and Priti Rastogi for SPD. Created so we can display the homeowner design via a webform (site).</description>
        <label>Design Photo</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>00380376 requested by Pat Hevrdejs and Priti Rastogi for SPD. Created so we can display the homeowner design via a webform (site) via association to opportunity.</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Designs</relationshipLabel>
        <relationshipName>Opportunity_Designs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relates user to Opportunity Design used for Energy Consultant Image displays to customers</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunity_Designs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Opportunity Design</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Dynamic_List</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>User__c</field>
            <operation>contains</operation>
            <value>Ross,Kevin</value>
        </filters>
        <label>Dynamic List</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>OPD-{000000}</displayFormat>
        <label>Opportunity Design Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Designs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>